--- a/style.css
+++ b/style.css
@@ -90,9 +90,16 @@ header {
     - text-align: center; (centers the text)
     - margin-bottom: 30px; (space below the header)
   */
-
+  background-color: #ffffff;
+  padding: 40 px 20px 60px 20px;
   /* TODO #3: Add your header styles here */
   margin-bottom: 30px;
+}
+
+.hero {
+  text-align: center;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 /* ============================================
@@ -199,6 +206,35 @@ main {
   /* Adds space inside the main content area */
 }
 
+section {
+  margin-bottom: 60px;
+}
+
+section h2{
+  font-size: 32px;
+  color: pink;
+  margin-bottom: 20px;
+}
+
+section p {
+  margin-bottom: 15px;
+  color: palevioletred;
+}
+
+.about-content{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.profile-img{
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  object-fit: cover;
+  flex-shrink: 0;
+}
+
 /* ============================================
    BUTTON STYLES
    ============================================ */
@@ -268,6 +304,14 @@ a button:hover {
    CARD STYLE (BONUS)
    ============================================ */
 
+.project-card{
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  margin-bottom: 20px;
+}
 /*
   TODO #8: Create a "card" class that you can use to style sections.
   
@@ -356,3 +400,7 @@ img {
    4. Use your browser's Developer Tools (F12 or Right-click -> Inspect)
       to see if there are any errors.
 */
+
+@media_screen(max-width: 400px) {
+  
+}
